fixing bugs (menu button (calendar), grid description styles, textarea scrollbar, placeholder, show error when no data (reports))

--- a/frontend/src/styles/pages/calendar/calendar.scss
+++ b/frontend/src/styles/pages/calendar/calendar.scss
@@ -176,10 +176,17 @@ $calendarPhoneWidth: 809px;
         word-wrap: break-word;
       }
 
-      .ct-calendar-task:hover {
-        .ct-menu-open-link {
-          opacity: 1;
-        }
+      .ct-menu-open-link {
+        position: absolute;
+        right: 2px;
+        top: 0;
+        background-color: #f1f1f1;
+        cursor: pointer;
+        opacity: 0;
+      }
+
+      .ct-calendar-task:hover .ct-menu-open-link, .ct-menu-open-link.ct-menu-opened {
+        opacity: 1;
       }
 
       .ct-calendar-task-stop-timer {
@@ -388,16 +395,6 @@ $calendarPhoneWidth: 809px;
           color: $gray-text;
           padding-left: 20px;
           padding-top: 10px;
-        }
-
-        .ct-menu-open-link {
-          position: absolute;
-          right: 2px;
-          top: 0;
-          background-color: #f1f1f1;
-          cursor: pointer;
-          opacity: 0;
-          z-index: 2;
         }
 
         .ct-calendar-time-entry-time {
