--- a/frontend/src/styles/pages/reports/reports.scss
+++ b/frontend/src/styles/pages/reports/reports.scss
@@ -121,6 +121,7 @@ $fieldHeight: 30px;
       width: 110px;
       text-overflow: ellipsis;
       overflow: hidden;
+      white-space: nowrap;
       text-align: center;
       cursor: pointer;
     }
